fixed the layout problem in mobile device - resized font

--- a/resume/index.css
+++ b/resume/index.css
@@ -5,7 +5,7 @@ h1, h2, h3, nav, footer {
 }
 body {
    font-family: "Lucida Sans", Verdana, Arial, sans-serif;
-   font-size: 1.5vw;
+   font-size: 1vw;
 }
 
 
